@@ -4,6 +4,7 @@ Revision history for Perl module TestRail::API
     - Fix performance issue in TestRail::Utils::Find::FindTests
     - Fix strange testsuite bug caused by regressions in MCE
     - Allow filtering in TestRail::API::getPlans
+    - Clone refs of cached values so that users can't corrupt it
 
 0.039 2017-03-07 TEODESIAN
     - Fix issue where follow_post_redirect could not be passed to constructor
